Try to fix transparent carousel on mobile issue

--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -165,6 +165,10 @@ html, body {
   background-size: cover;
 }
 
+.carousel-container {
+  background: $opaque;
+}
+
 .menu-page-1 {
   margin: 0 80px 0 0;
 }
